# Nexus_Thesis

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
docs/: project_structure_filtered.txt
main/: CMakeLists.txt  gpio_expander.cpp  gpio_expander.h  i2c_manager.cpp  i2s_manager.cpp  main.cpp  module_connector.cpp  spi_manager.cpp
main/modules/: humidity_module.cpp
main/protocols/: i2c_manager.cpp  i2c_manager.h  i2s_manager.cpp  i2s_manager.h  spi_manager.cpp  spi_manager.h
main/services/: golioth_manager.cpp
